load("//bazel:api.bzl", "modular_cc_binary", "modular_py_test")

package(default_visibility = ["//visibility:private"])

modular_cc_binary(
    name = "example",
    testonly = True,
    srcs = ["example.c"],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:CAPI.headers",
        "//max/internal:max",
    ],
)

modular_py_test(
    name = "test",
    srcs = ["test_capi.py"],
    data = [
        ":example",
    ],
    env = {
        "GRAPH_EXECUTOR": "$(location :example)",
    },
    mojo_deps = ["//max:MOGGKernelAPI"],
    tags = ["gpu"],
    # TODO(GEX-3156): Investigate and enable on Apple GPU
    target_compatible_with = ["//:has_gpu"] + select({
        "//:apple_gpu": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
    ],
)
