load("//bazel:api.bzl", "modular_py_binary", "modular_run_binary_test", "requirement")

package(default_visibility = ["//visibility:private"])

modular_py_binary(
    name = "addition",
    srcs = ["addition.py"],
    imports = ["."],
    mojo_deps = select({
        "//:emit_mojo_enabled": ["//max:MOGGKernelAPI"],
        "//conditions:default": [],
    }),
    tags = ["no-pydeps"],  # TODO: Fix and re-enable
    deps = [
        "//max/python/max/engine",
        "//max/python/max/graph",
        requirement("numpy"),
    ],
)

modular_run_binary_test(
    name = "addition_test",
    binary = "addition",
)
