load("//bazel:api.bzl", "modular_py_binary", "modular_run_binary_test")

package(default_visibility = ["//visibility:private"])

modular_py_binary(
    name = "basic",
    srcs = ["basic.py"],
    imports = ["."],
    mojo_deps = select({
        "//:emit_mojo_enabled": ["//max:MOGGKernelAPI"],
        "//conditions:default": [],
    }),
    deps = [
        "//max/python/max/entrypoints",
        "//max/python/max/pipelines",
    ],
)

modular_run_binary_test(
    name = "basic_test",
    timeout = "long",
    binary = "basic",
    tags = [
        "requires-network",
        "resources:memory:55000",  # 55 GB
    ],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME long running on MacOS. MOCO-2412
)
