load("//bazel:api.bzl", "modular_py_binary", "modular_run_binary_test")

package(default_visibility = ["//visibility:private"])

modular_py_binary(
    name = "basic",
    srcs = ["basic.py"],
    imports = ["."],
    mojo_deps = ["//max:MOGGKernelAPI"],
    deps = [
        "//max/python/max/entrypoints",
        "//max/python/max/pipelines",
    ],
)

modular_run_binary_test(
    name = "basic_test",
    timeout = "long",
    binary = "basic",
    tags = [
        "manual",  # TODO(SERVOPT-900)
        "requires-network",
        # "run-in-hf-workflow",  # TODO(SERVOPT-900, SERVOPT-932)
    ],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME long running on MacOS. MOCO-2412
)
